# aviutl2-alias-inserter

./: CONTRIBUTING.md  Cargo.toml  README.md  aviutl2.toml
.github/: copilot-instructions.md
docs/: Software-Requirement-Specification.md  archtecture.md
scripts/: release.ps1
src/: lib.rs  main.rs
tests/fixtures/: simple.object
